added image and second page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Beach Grillin'</title>
+</head>
+<body>
+  <header>
+    <h1>Are you ready for the beach!?!</h1>
+    <h3>Are you HUNGRY?</h3>
+    <p>Than come on down to the <b>BEACH</b> and bring some food to grill! You don't want to be this <a href="sad.html">guy</a>.</p>
+  </header>
+</body>
+</html>
