--- a/index.html
+++ b/index.html
@@ -9,5 +9,48 @@
     <h3>Are you HUNGRY?</h3>
     <p>Than come on down to the <b>BEACH</b> and bring some food to grill! You don't want to be this <a href="sad.html">guy</a>.</p>
   </header>
+  <section>
+    <h4>
+      Be sure to bring useful things and things to share like:
+    </h4>
+    <ul>
+      <li>Chips</li>
+      <li>Plastic Ware</li>
+      <li>Napkins</li>
+      <li>A Blanket</li>
+      <li>Hot Dogs</li>
+      <li>Veggies</li>
+      <li>And so on</li>
+    </ul>
+  </section>
+  <form name="Beach Grilling" action="excited.html">
+    <h4>Please take the time to fill out this form so we can plan our beach outing accordingly.</h4>
+    <div>
+      <label>What's your name?</label>
+      <input type="text" name="name">      
+    </div>
+    <div>
+      <label>What's your phone number?</label>
+      <input type="phonenumber" name="Phone Number">
+    </div>
+    <div>
+      <label>How many people are you bringing? Don't count yourself!</label>
+      <select name="numpeople">
+        <option value="0">0</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="4+">4+</option>
+      </select>
+    </div>
+    <div>
+      <label>What food/supplies are you bringing?</label>
+      <textarea name="bringing" rows="5" cols="30"></textarea>
+    </div>
+    <div>
+      <button type="submit">Submit</button>
+    </div>
+  </form>
 </body>
 </html>
