--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li>Veggies</li>
       <li>And so on</li>
     </ul>
+    <img src="images/BeachGrilling.jpg" alt="Beach Grilling">
   </section>
   <form name="Beach Grilling" action="excited.html">
     <h4>Please take the time to fill out this form so we can plan our beach outing accordingly.</h4>
@@ -31,7 +32,7 @@
     </div>
     <div>
       <label>What's your phone number?</label>
-      <input type="phonenumber" name="Phone Number">
+      <input type="text" name="Phone Number">
     </div>
     <div>
       <label>How many people are you bringing? Don't count yourself!</label>
@@ -52,5 +53,10 @@
       <button type="submit">Submit</button>
     </div>
   </form>
+  <section>
+    <p>Here's a link to a similar site. It's similar in that it involves grills and has "beach" in the name.</p>
+    <a href="https://www.hamiltonbeach.com/outdoor-gas-grills.html">Hamilton Beach Grills</a>
+    <p>The site is good in that I can see a lot of what the different parts in the div tag are doing and the interaction of the CSS. My main complaint would be that the website looks a bit dated to me. This is more aesthetics than anything else, the site seems to function well.</p>
+  </section>
 </body>
 </html>
