--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   </header>
   <main >
     <div>
-        <h1>Are you ready for the beach!?!</h1>
-        <h3>Are you HUNGRY?</h3>
+        <h1 class="impactful">Are you ready for the beach!?!</h1>
+        <h3 class="impactful">Are you HUNGRY?</h3>
         <p>Than come on down to the <b>BEACH</b> and bring some food to grill! You don't want to be this <a href="sad.html">guy</a>.</p>
     </div>
-    <section>
-      <h4>
+    <section id="useful_things">
+      <h4 class="impactful">
         Be sure to bring useful things and things to share like:
       </h4>
       <ul>
@@ -29,7 +29,7 @@
       <img src="images/BeachGrilling.jpg" alt="Beach Grilling">
     </section>
     <form name="Beach Grilling" action="excited.html">
-      <h4>Please take the time to fill out this form so we can plan our beach outing accordingly.</h4>
+      <h4 class="impactful">Please take the time to fill out this form so we can plan our beach outing accordingly.</h4>
       <div>
         <label>What's your name?</label>
         <input type="text" name="name">      
