Style banner and add general background box class.

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <header>
-  </header>
-  <main >
-    <div>
-        <h1 class="impactful">Are you ready for the beach!?!</h1>
-        <h3 class="impactful">Are you HUNGRY?</h3>
-        <p>Than come on down to the <b>BEACH</b> and bring some food to grill! You don't want to be this <a href="sad.html">guy</a>.</p>
+  <main>
+    <header class="banner">
+      <h1 class="impactful">Are you ready for the beach!?!</h1>
+    </header>
+    <div class="backing_box">
+      <h3 class="impactful">Are you HUNGRY?</h3>
+      <p>Than come on down to the <b>BEACH</b> and bring some food to grill! You don't want to be this <a href="sad.html">guy</a>.</p>
     </div>
     <section id="useful_things">
       <h4 class="impactful">
@@ -28,7 +28,7 @@
       </ul>
       <img src="images/BeachGrilling.jpg" alt="Beach Grilling">
     </section>
-    <form name="Beach Grilling" action="excited.html">
+    <form name="Beach Grilling" action="excited.html" class="backing_box">
       <h4 class="impactful">Please take the time to fill out this form so we can plan our beach outing accordingly.</h4>
       <div>
         <label>What's your name?</label>
@@ -57,7 +57,7 @@
         <button type="submit">Submit</button>
       </div>
     </form>
-    <section>
+    <section class="backing_box">
       <p>Here's a link to a similar site. It's similar in that it involves grills and has "beach" in the name.</p>
       <a href="https://www.hamiltonbeach.com/outdoor-gas-grills.html">Hamilton Beach Grills</a>
       <p>The site is good in that I can see a lot of what the different parts in the div tag are doing and the interaction of the CSS. My main complaint would be that the website looks a bit dated to me. This is more aesthetics than anything else, the site seems to function well.</p>
