--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </select>
       </div>
       <div>
-        <label>What food/supplies are you bringing?</label>
+        <label>What food/supplies are you bringing?<br></label>
         <textarea name="bringing" rows="5" cols="30"></textarea>
       </div>
       <div>
